tests/transpiler/x/rs/if_then_else_nested.error
rustc: exit status 1
warning: unnecessary parentheses around `if` condition
 --> /workspace/mochi/tests/transpiler/x/rs/if_then_else_nested.rs:4:26
  |
4 |     let msg: String = if (x > 10) { "big" } else if (x > 5) { "medium" } else { "small" };
  |                          ^      ^
  |
  = note: `#[warn(unused_parens)]` on by default
help: remove these parentheses
  |
4 -     let msg: String = if (x > 10) { "big" } else if (x > 5) { "medium" } else { "small" };
4 +     let msg: String = if x > 10 { "big" } else if (x > 5) { "medium" } else { "small" };
  |

warning: unnecessary parentheses around `if` condition
 --> /workspace/mochi/tests/transpiler/x/rs/if_then_else_nested.rs:4:53
  |
4 |     let msg: String = if (x > 10) { "big" } else if (x > 5) { "medium" } else { "small" };
  |                                                     ^     ^
  |
help: remove these parentheses
  |
4 -     let msg: String = if (x > 10) { "big" } else if (x > 5) { "medium" } else { "small" };
4 +     let msg: String = if (x > 10) { "big" } else if x > 5 { "medium" } else { "small" };
  |

error[E0308]: mismatched types
 --> /workspace/mochi/tests/transpiler/x/rs/if_then_else_nested.rs:4:37
  |
4 |     let msg: String = if (x > 10) { "big" } else if (x > 5) { "medium" } else { "small" };
  |                                     ^^^^^- help: try using a conversion method: `.to_string()`
  |                                     |
  |                                     expected `String`, found `&str`

error[E0308]: mismatched types
 --> /workspace/mochi/tests/transpiler/x/rs/if_then_else_nested.rs:4:63
  |
4 |     let msg: String = if (x > 10) { "big" } else if (x > 5) { "medium" } else { "small" };
  |                                                               ^^^^^^^^- help: try using a conversion method: `.to_string()`
  |                                                               |
  |                                                               expected `String`, found `&str`

error[E0308]: mismatched types
 --> /workspace/mochi/tests/transpiler/x/rs/if_then_else_nested.rs:4:81
  |
4 |     let msg: String = if (x > 10) { "big" } else if (x > 5) { "medium" } else { "small" };
  |                                                                                 ^^^^^^^- help: try using a conversion method: `.to_string()`
  |                                                                                 |
  |                                                                                 expected `String`, found `&str`

error: aborting due to 3 previous errors; 2 warnings emitted

For more information about this error, try `rustc --explain E0308`.
