tests/transpiler/x/rs/if_then_else_nested.rs
// Generated by Mochi transpiler v0.10.31 on 2025-07-20 08:42 +0700
fn main() {
    let x: i64 = 8;
    let msg: String = if (x > 10) { "big" } else if (x > 5) { "medium" } else { "small" };
    println!("{}", msg);
}
